<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:baselineAligned="false"
    android:orientation="vertical">

    <include
        android:id="@+id/top_panel_layout"
        layout="@layout/top_fragment" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20px"
        android:layout_marginRight="20px"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/reset_page_name"
            android:textColor="@color/colorSure"
            android:textSize="36px" />

        <View
            android:layout_width="match_parent"
            android:layout_height="80px"
            android:background="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_page_message"
            android:textColor="@color/colorSure"
            android:textSize="26px" />

        <View
            android:layout_width="match_parent"
            android:layout_height="56px"
            android:background="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_page_message_one"
            android:textColor="@color/colorSure"
            android:textSize="30px" />

        <View
            android:layout_width="match_parent"
            android:layout_height="16px"
            android:background="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_page_message_two"
            android:textColor="@color/colorSure"
            android:textSize="30px" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_reset_button"
                android:layout_width="500px"
                android:layout_height="80px"
                android:layout_above="@+id/bottom_view"
                android:layout_centerHorizontal="true"
                android:background="@drawable/round_border"
                android:gravity="center"
                android:text="@string/reset_name"
                android:textColor="@color/colorSure"
                android:textSize="30px" />

            <View
                android:id="@+id/bottom_view"
                android:layout_width="match_parent"
                android:layout_height="44px"
                android:layout_alignParentBottom="true"
                android:background="@color/black" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>