<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80px"
    android:background="@color/black"
    android:clickable="true"
    android:baselineAligned="false">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:layout_marginLeft="20px"
        android:layout_marginRight="20px"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/settings_item_title"
            android:layout_width="wrap_content"
            android:layout_height="80px"
            android:textSize="30px"
            android:gravity="center"
            android:text="@string/hotSpot_name"
            android:textColor="@color/colorName"
            android:layout_alignParentLeft="true"/>
        <TextView
            android:id="@+id/settings_item_name"
            android:layout_width="wrap_content"
            android:layout_height="80px"
            android:textSize="24px"
            android:gravity="center"
            android:text="@string/hotSpot_num"
            android:textColor="@color/colorWord"
            android:layout_alignParentRight="true"
            android:visibility="visible"/>
        <TextView
            android:id="@+id/settings_item_num"
            android:layout_width="wrap_content"
            android:layout_height="80px"
            android:textSize="24px"
            android:gravity="center"
            android:text="@string/version_num"
            android:textColor="@color/colorWord"
            android:layout_toStartOf="@+id/iv_settings_item"
            android:layout_marginEnd="16px"
            android:visibility="gone"/>
        <ImageView
            android:id="@+id/iv_settings_item"
            android:layout_width="21px"
            android:layout_height="80px"
            android:scaleType="centerInside"
            android:src="@drawable/ic_arrow"
            android:layout_alignParentRight="true"
            android:visibility="gone"/>
    </RelativeLayout>
</LinearLayout>