<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="190px"
    android:background="@color/black"
    android:baselineAligned="false"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="190px">

        <LinearLayout
            android:id="@+id/middle_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider"
            android:dividerPadding="1px"
            android:orientation="horizontal"
            android:showDividers="middle">

            <LinearLayout
                android:id="@+id/air_plane_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_airplane"
                    android:layout_width="84px"
                    android:layout_height="84px"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_air_mode_normal" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="30px" />

                <TextView
                    android:id="@+id/tv_airplane"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/airplane"
                    android:textColor="@color/colorWord"
                    android:textSize="20px"
                    android:typeface="normal" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/wifi_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_wifi"
                    android:layout_width="84px"
                    android:layout_height="84px"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_wifi_normal" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="30px" />

                <TextView
                    android:id="@+id/tv_wifi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/wifi"
                    android:textColor="@color/colorWord"
                    android:textSize="20px"
                    android:typeface="normal" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/mobile_network_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_network"
                    android:layout_width="84px"
                    android:layout_height="84px"
                    android:scaleType="centerInside"
                    android:src="@drawable/yidong_normal" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="30px" />

                <TextView
                    android:id="@+id/tv_network"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/mobile_network"
                    android:textColor="@color/colorWord"
                    android:textSize="20px"
                    android:typeface="normal" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>