<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:baselineAligned="false"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="382px"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="144px"
            android:layout_height="144px"
            android:layout_marginTop="84px"
            android:src="@drawable/head_portrait" />

        <View
            android:layout_width="match_parent"
            android:layout_height="24px" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="yangyulin"
            android:textColor="@color/colorName"
            android:textSize="30px" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="20px" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="13600168265"
            android:textColor="@color/colorWord"
            android:textSize="24px" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="190px">

        <LinearLayout
            android:id="@+id/middle_layout"
            android:layout_width="match_parent"
            android:layout_height="134px"
            android:divider="@drawable/divider"
            android:dividerPadding="1px"
            android:orientation="horizontal"
            android:showDividers="middle">

            <LinearLayout
                android:id="@+id/air_plane_layout"
                android:layout_width="match_parent"
                android:layout_height="134px"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="84px"
                    android:layout_height="84px"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_air_mode_normal" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="30px" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/airplane"
                    android:textColor="@color/colorWord"
                    android:textSize="20px"
                    android:typeface="normal" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/wifi_layout"
                android:layout_width="match_parent"
                android:layout_height="134px"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="84px"
                    android:layout_height="84px"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_wifi_normal" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="30px" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/wifi"
                    android:textColor="@color/colorWord"
                    android:textSize="20px"
                    android:typeface="normal" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/mobile_network_layout"
                android:layout_width="match_parent"
                android:layout_height="134px"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="84px"
                    android:layout_height="84px"
                    android:scaleType="centerInside"
                    android:src="@drawable/yidong_normal" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="30px" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/mobile_network"
                    android:textColor="@color/colorWord"
                    android:textSize="20px"
                    android:typeface="normal" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="176px"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20px"
            android:text="@string/volume"
            android:textColor="@color/colorTitle"
            android:textSize="24px" />

        <View
            android:layout_width="match_parent"
            android:layout_height="36px" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="152px"
            android:layout_marginLeft="20px"
            android:layout_marginRight="20px"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="60px"
                android:layout_height="60px"
                android:layout_marginRight="20px"
                android:scaleType="centerInside"
                android:src="@drawable/ic_volume_small" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="20px"
                android:gravity="center_vertical">

                <SeekBar
                    android:layout_width="340px"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <ImageView
                android:layout_width="60px"
                android:layout_height="60px"
                android:scaleType="centerInside"
                android:src="@drawable/ic_volume_large" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>