<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:baselineAligned="false"
    android:orientation="vertical">

    <include
        android:id="@+id/top_panel_layout"
        layout="@layout/top_fragment" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20px"
        android:divider="@drawable/divider"
        android:dividerPadding="1px"
        android:orientation="vertical"
        android:showDividers="middle">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="72px"
            android:layout_marginRight="20px">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0px"
                    android:text="@string/time_page_time"
                    android:textColor="@color/colorName"
                    android:textSize="30px" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:gravity="center">

                <Switch
                    android:id="@+id/switch_net_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:thumb="@drawable/thumb"
                    android:track="@drawable/track" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="72px"
            android:layout_marginRight="20px">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0px"
                    android:text="@string/time_page_set_time"
                    android:textColor="@color/colorName"
                    android:textSize="30px" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:gravity="center">

                <ImageView
                    android:id="@+id/iv_timeime_dropdown_arrow"
                    android:layout_width="36px"
                    android:layout_height="24px"
                    android:src="@drawable/ic_dropdown_arrow"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/iv_time_pullup_arrow"
                    android:layout_width="36px"
                    android:layout_height="24px"
                    android:src="@drawable/ic_pullup_arrow"
                    android:visibility="visible" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/date_time_pick_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider"
            android:dividerPadding="1px"
            android:orientation="vertical"
            android:showDividers="middle"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="72px"
                android:gravity="right"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_year"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="@color/colorSure"
                    android:textSize="22px" />

                <TextView
                    android:id="@+id/text_date"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingRight="72px"
                    android:text="@string/app_name"
                    android:textColor="@color/colorSure"
                    android:textSize="22px" />

                <TextView
                    android:id="@+id/text_am_pm"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="@color/colorSure"
                    android:textSize="22px" />

                <TextView
                    android:id="@+id/text_time"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingRight="20px"
                    android:text="@string/app_name"
                    android:textColor="@color/colorSure"
                    android:textSize="22px" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="20px" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingRight="20px">

                    <com.gomtel.settings.util.LoopView
                        android:id="@+id/pick_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:awv_centerTextColor="@color/colorName"
                        app:awv_dividerTextColor="@android:color/transparent"
                        app:awv_outerTextColor="@color/colorTitle"
                        app:awv_textsize="28"
                        app:awv_textsize_not_select="22" />

                    <com.gomtel.settings.util.LoopView
                        android:id="@+id/pick_am_pm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:awv_centerTextColor="@color/colorName"
                        app:awv_dividerTextColor="@android:color/transparent"
                        app:awv_outerTextColor="@color/colorTitle"
                        app:awv_textsize="28"
                        app:awv_textsize_not_select="22" />

                    <com.gomtel.settings.util.LoopView
                        android:id="@+id/pick_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:awv_centerTextColor="@color/colorName"
                        app:awv_dividerTextColor="@android:color/transparent"
                        app:awv_outerTextColor="@color/colorTitle"
                        app:awv_textsize="28"
                        app:awv_textsize_not_select="22" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>